corrected the new Byte object error